--- a/index.html
+++ b/index.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
+    <title>OhMyfood</title>
 </head>
+
 <body>
-    <h1>OhMyfood</h1>
+
+    <header>
+        <h1 id=entête>OhMyfood</h1>
+    </header>
+    
+    <section class="recherche">
+        <div id="searchbar">
+            <span class="left"><i class="fa fa-map-marker"></i></span>
+            <span class="middle"><input type="text" value="Paris,Belleville" /></span>
+            <span class="right"><button type="submit"><span class="val_search">Rechercher</span><i class="fa fa-search"
+                        aria-hidden="true"></i>
+                </button></span>
+        </div>
+        <h1>Réservez le menu qui vous convient</h1>
+        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</div>
+    </section>
+
+    <section id="filters">
+        <h1>Fonctionnement</h1>
+
+        <div class="filter">
+            <div> <i class="fas fa-mobile-alt"></i></div>
+            <span><a href="#"><strong>Choisissez votre restaurant</strong></a></span>
+        </div>
+
+        <div class="filter">
+            <div> <i class="far fa-list-ul"></i></div>
+            <span><a href="#"><strong>Composez votre menu</strong></a></span>
+        </div>
+
+        <div class="filter">
+            <div> <i class="fad fa-store"></i></div>
+            <span><a href="#"><strong>Dégustez au restaurant</strong></a></span>
+        </div>
+    </section>
+
+    <section id="restaurants">
+        <h1>Restaurants</h1>
+        <div class="choix-menus">
+            <img src="./images/restaurants/small/jay-wennington-N_Y88TWmGwA-unsplash_mini20.jpg" alt="jay-wennington" />
+            <div class="menu_description">
+                <h2>La palette du goût</h2>
+                <p><span>Ménilmontant</span></p>
+            </div>
+        </div>
+        <div class="choix-menus">
+            <img src="./images/restaurants/small/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_mini20.jpg"
+                alt="louis-hansel" />
+            <div class="menu_description">
+                <h2>La note enchantée</h2>
+                <p><span>Charonne</span></p>
+            </div>
+        </div>
+        <div class="choix-menus">
+            <img src="./images/restaurants/small/stil-u2Lp8tXIcjw-unsplash_mini20.jpg" alt="still" alt="louis-hansel" />
+            <div class="menu_description">
+                <h2>&Agrave; la française</h2>
+                <p><span>Cité rouge</span></p>
+            </div>
+        </div>
+        <div class="choix-menus">
+            <img src="./images/restaurants/small/toa-heftiba-DQKerTsQwi0-unsplash_mini20.jpg" alt="toa-heftiba"
+                alt="louis-hansel" />
+            <div class="menu_description">
+                <h2>Le délice des sens</h2>
+                <p><span>Folie-Méricourt</span></p>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
