--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
 
     <header>
-        <h1 id=entête>OhMyfood</h1>
+        <h1 class="titre">OhMyfood</h1>
     </header>
-    
+
     <section class="recherche">
         <div id="searchbar">
             <span class="left"><i class="fa fa-map-marker"></i></span>
@@ -81,5 +81,8 @@
         </div>
     </section>
 </body>
+<footer>
+
+</footer>
 
 </html>
