encodage html du footer

--- a/index.html
+++ b/index.html
@@ -81,8 +81,20 @@
         </div>
     </section>
 </body>
-<footer>
 
+<footer>
+    <h1 class="titre">OhMyfood</h1>
+    <div id="list-footer">
+        <ul>
+            <ol><i class="fa fa-utensils"></i>
+                <a href="#">Proposer un restaurant</a></i>
+            </ol>
+            <ol><i class="fas fa-hands-helping"></i>
+                <a href="#">Devenir partenaire</a>
+            </ol>
+            <ol><a href="#">Mentions légales</a></ol>
+        </ul>
+    </div>
 </footer>
 
 </html>
