--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <h1 class="titre">OhMyfood</h1>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
     </header>
 
     <section class="recherche">
@@ -25,76 +25,80 @@
                 </button></span>
         </div>
         <h1>Réservez le menu qui vous convient</h1>
-        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</div>
+        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
     </section>
 
     <section id="filters">
         <h1>Fonctionnement</h1>
 
         <div class="filter">
-            <div> <i class="fas fa-mobile-alt"></i></div>
+            <div class="numero">1</div>
+            <div><i class="fas fa-mobile-alt"></i></div>
             <span><a href="#"><strong>Choisissez votre restaurant</strong></a></span>
         </div>
 
         <div class="filter">
-            <div> <i class="far fa-list-ul"></i></div>
+            <div class="numero">2</div>
+            <div><i class="fas fa-list"></i></div>
             <span><a href="#"><strong>Composez votre menu</strong></a></span>
         </div>
 
         <div class="filter">
-            <div> <i class="fad fa-store"></i></div>
+            <div class="numero">3</div>
+            <div> <i class="fas fa-store"></i></div>
             <span><a href="#"><strong>Dégustez au restaurant</strong></a></span>
         </div>
     </section>
 
     <section id="restaurants">
         <h1>Restaurants</h1>
-        <div class="choix-menus">
-            <img src="./images/restaurants/small/jay-wennington-N_Y88TWmGwA-unsplash_mini20.jpg" alt="jay-wennington" />
-            <div class="menu_description">
-                <h2>La palette du goût</h2>
-                <p><span>Ménilmontant</span></p>
-            </div>
+
+        <div class="choix-menus"></div>
+        <a href="page1.html"><img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="jay-wennington" /></a>
+        <div class="menu_description">
+            <h2>La palette du goût</h2>
+            <p><span>Ménilmontant</span></p>
         </div>
         <div class="choix-menus">
-            <img src="./images/restaurants/small/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash_mini20.jpg"
-                alt="louis-hansel" />
+            <a href="page2.html"><img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                    alt="louis-hansel" /></a>
             <div class="menu_description">
                 <h2>La note enchantée</h2>
                 <p><span>Charonne</span></p>
             </div>
         </div>
         <div class="choix-menus">
-            <img src="./images/restaurants/small/stil-u2Lp8tXIcjw-unsplash_mini20.jpg" alt="still" alt="louis-hansel" />
+            <a href="page3.html"><img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil" /></a>
             <div class="menu_description">
                 <h2>&Agrave; la française</h2>
                 <p><span>Cité rouge</span></p>
             </div>
         </div>
         <div class="choix-menus">
-            <img src="./images/restaurants/small/toa-heftiba-DQKerTsQwi0-unsplash_mini20.jpg" alt="toa-heftiba"
-                alt="louis-hansel" />
+            <a href="page4.html"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    alt="toa-heftiba" /></a>
             <div class="menu_description">
                 <h2>Le délice des sens</h2>
                 <p><span>Folie-Méricourt</span></p>
             </div>
         </div>
     </section>
-</body>
 
-<footer>
-    <h1 class="titre">OhMyfood</h1>
-    <div id="list-footer">
-        <ul>
-            <ol><i class="fa fa-utensils"></i>
-                <a href="#">Proposer un restaurant</a></i>
-            </ol>
-            <ol><i class="fas fa-hands-helping"></i>
-                <a href="#">Devenir partenaire</a>
-            </ol>
-            <ol><a href="#">Mentions légales</a></ol>
-        </ul>
-    </div>
-</footer>
+    <footer>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+        <div id="list-footer">
+            <ul>
+                <li><i class="fa fa-utensils">
+                        <a href="#">Proposer un restaurant</a></i>
+                
+                <li><i class="fas fa-hands-helping"></i>
+                    <a href="#">Devenir partenaire</a>
+                
+                <li><a href="#">Mentions légales</a>
+            </ul>
+        </div>
+    </footer>
+</body>
 
 </html>
