Structure de base html fichier  page1. html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+        <div class="logo"><img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête"></div>
     </header>
 
     <section class="recherche">
@@ -26,6 +26,7 @@
         </div>
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+        <div class="bouton">Explorer nos restaurants</div>
     </section>
 
     <section id="filters">
@@ -91,11 +92,13 @@
             <ul>
                 <li><i class="fa fa-utensils">
                         <a href="#">Proposer un restaurant</a></i>
-                
+
                 <li><i class="fas fa-hands-helping"></i>
                     <a href="#">Devenir partenaire</a>
-                
+
                 <li><a href="#">Mentions légales</a>
+
+                <li><a href="#">Contact</a>
             </ul>
         </div>
     </footer>
