--- a/page1.html
+++ b/page1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,92 @@
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
     <title>OhMyfood-Menu à la française</title>
 </head>
+
 <body>
+
     <header>
-    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-    <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
-</header>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+        <a href="page4.html"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                alt="toa-heftiba" /></a>
+    </header>
+
+    <section class="menu-français">
+        <h1 class=titre>&Agrave; la française</h1>
+        <p>ENTR&Eacute;E</p><br>
+
+        <div class="entree"><strong>Tartare de poulpe acidulé</strong><br>
+            Au zeste d'orange
+            <span>25€</span>
+        </div>
+
+        <div class="entree"><strong>Velouté de légumes d'antan</strong><br>
+            Carotte, panais, topinambour
+            <span>35€</span>
+        </div>
+
+
+        <div class="entree"><strong>Soupe à l'oignon</strong><br>
+            Revisitée
+            <span>20€</span>
+        </div>
+
+        <p>PLATS</p><br>
+        <div class="plat"><strong>Coquilles Saint-Jacques</strong><br>
+            Accompagnées d'une purée de panais
+            <span>40€</span>
+        </div>
+
+        <div class="plat"><strong>Magret de canard</strong><br>
+            Et parmentier de pommes de terres
+            <span>35€</span>
+        </div>
+
+        <div class="plat"><strong>Pigeonneaux d'Ille et Vilaine</strong><br>
+            Sur son lit de gnocchis aux légumes
+            <span>44€</span>
+        </div>
+
+        <div class="plat"><strong>Pigeonneaux d'Ille et Vilaine</strong><br>
+            Sur son lit de gnocchis aux légumes
+            <span>44€</span>
+        </div>
+
+        <p>DESSERTS</p><br>
+        <div class="dessert"><strong>Pétales de violettes glacés</strong><br>
+            Et purée de noisettes
+            <span>18€</span>
+        </div>
+
+        <div class="plat"><strong>Fondant au chocolat</strong><br>
+            Revisité
+            <span>22€</span>
+        </div>
+
+        <div class="plat"><strong>Millefeuille croustillant</strong><br>
+            Myrtilles et pâte d'amande
+            <span>23€</span>
+        </div>
+
+        <div class="bouton">Commander</div>
+    </section>
+
+    <footer>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+        <div id="list-footer">
+            <ul>
+                <li><i class="fa fa-utensils">
+                        <a href="#">Proposer un restaurant</a></i>
+
+                <li><i class="fas fa-hands-helping"></i>
+                    <a href="#">Devenir partenaire</a>
+
+                <li><a href="#">Mentions légales</a>
+
+                <li><a href="#">Contact</a>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
