Structure de base html fichier page2.html

--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
+    
     <title>OhMyfood-Menu à la française</title>
 </head>
 
@@ -14,7 +16,7 @@
     <header>
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
-        <a href="page4.html"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="toa-heftiba" /></a>
     </header>
 
@@ -36,6 +38,7 @@
         <div class="entree"><strong>Soupe à l'oignon</strong><br>
             Revisitée
             <span>20€</span>
+            <span class="check"><i class="far fa-check-circle"></i></span>
         </div>
 
         <p>PLATS</p><br>
