--- a/page2.html
+++ b/page2.html
@@ -1,16 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
     <title>OhMyfood-Menu à la française</title>
 </head>
+
 <body>
+
     <header>
-    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-    <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
-</header>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                alt="still" /></a>
+    </header>
+
+    <section class="menu-français">
+        <h1 class=titre>La note enchantée</h1>
+        <p>ENTR&Eacute;E</p><br>
+
+        <div class="entree"><strong>Ravioles de foie gras</strong><br>
+            Sur blini à la farine de blé noir
+            <span>35€</span>
+        </div>
+
+        <div class="entree"><strong>Caviar osciètre</strong><br>
+            Carotte, panais, topinambour
+            <span>35€</span>
+        </div>
+
+
+        <div class="entree"><strong>Foie gras de canard cuit entier</strong><br>
+            Confiture de figue et pain tosté
+            <span>35€</span>
+            <span class="check"><i class="far fa-check-circle"></i></span>
+        </div>
+
+        <p>PLATS</p><br>
+        <div class="plat"><strong>Noix de coquilles Saint-Jacques</strong><br>
+            Accompagnées d'une purée de panais
+            <span>40€</span>
+        </div>
+
+        <div class="plat"><strong>Magret de canard</strong><br>
+            Sur lit de purée de céleri-rave
+            <span>40€</span>
+        </div>
+
+        <div class="plat"><strong>Langoustines poêlées</strong><br>
+            Purée de patates douces
+            <span>35€</span>
+        </div>
+
+        <div class="plat"><strong>Mijoté de queue de boeuf</strong><br>
+            Et riz sauvage au zeste de citron
+            <span>44€</span>
+        </div>
+
+        <p>DESSERTS</p><br>
+        <div class="dessert"><strong>Macaron noistte et chocolat</strong><br>
+            Glace au caramel brun et sel de guérande
+            <span>18€</span>
+        </div>
+
+        <div class="dessert"><strong>Bababa au rhum revisité</strong><br>
+            Avec son coulis de citron
+            <span>22€</span>
+        </div>
+
+        <div class="dessert"><strong>tarte au citron meringuée</strong><br>
+            Destructurée
+            <span>23€</span>
+        </div>
+
+        <div class="bouton">Commander</div>
+    </section>
+
+    <footer>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+        <div id="list-footer">
+            <ul>
+                <li><i class="fa fa-utensils">
+                        <a href="#">Proposer un restaurant</a></i>
+
+                <li><i class="fas fa-hands-helping"></i>
+                    <a href="#">Devenir partenaire</a>
+
+                <li><a href="#">Mentions légales</a>
+
+                <li><a href="#">Contact</a>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
