Structure html de base fichier page3.html

--- a/page1.html
+++ b/page1.html
@@ -17,7 +17,7 @@
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
         <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="toa-heftiba" /></a>
+                alt="toa-heftiba" />
     </header>
 
     <section class="menu-français">
