--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
-    <title>OhMyfood-Menu à la française</title>
+    <title>OhMyfood-Menu la note enchantée</title>
 </head>
 
 <body>
@@ -16,10 +16,10 @@
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="still" /></a>
+                alt="still" />
     </header>
 
-    <section class="menu-français">
+    <section class="menu-note-enchantee">
         <h1 class=titre>La note enchantée</h1>
         <p>ENTR&Eacute;E</p><br>
 
