--- a/page3.html
+++ b/page3.html
@@ -4,13 +4,90 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
-    <title>OhMyfood-Menu à la française</title>
+    <title>OhMyfood-Menu la palette du goût</title>
 </head>
+
 <body>
     <header>
     <a href="index.html"><i class="fas fa-arrow-left"></i></a>
     <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+    <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                alt="jay-wennington">
 </header>
+
+<section class="menu-palette-gout">
+    <h1 class=titre>La palette du goût</h1>
+    <p>ENTR&Eacute;E</p><br>
+
+    <div class="entree"><strong>Fricassée d'escargot</strong><br>
+        Au piment d'espelette
+        <span>25€</span>
+    </div>
+
+    <div class="entree"><strong>Foie gras de canard mi-cuit</strong><br>
+        Et ses copeaux de truffe noire
+        <span>35€</span>
+    </div>
+
+    <div class="entree"><strong>Oeuf au plat</strong><br>
+        Assaisonné à la truffe sur lit de...
+        <span>20€</span>
+        <span class="check"><i class="far fa-check-circle"></i></span>
+    </div>
+
+    <p>PLATS</p><br>
+    <div class="plat"><strong>Filet de boeuf aux herbes</strong><br>
+        Assaisonné de sa ribambelle de légu...
+        <span>40€</span>
+    </div>
+
+    <div class="plat"><strong>Parmentier de queue de boeuf</strong><br>
+        &Agrave; la truffe noire sur sa purée de panais
+        <span>35€</span>
+    </div>
+
+    <div class="plat"><strong>Filet de turbeau</strong><br>
+        Aux agrumes
+        <span>44€</span>
+    </div>
+
+    <p>DESSERTS</p><br>
+    <div class="dessert"><strong>Paris-brest</strong><br>
+        Revisité
+        <span>18€</span>
+    </div>
+
+    <div class="dessert"><strong>Macaron au chocolat d'exception</strong><br>
+        Et glace à la vanille de Madagascar
+        <span>22€</span>
+    </div>
+
+    <div class="dessert"><strong>Mousse au chocolat</strong><br>
+        Au piment d'espelette et à la truffe noire
+        <span>23€</span>
+    </div>
+
+    <div class="bouton">Commander</div>
+</section>
+
+<footer>
+    <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+    <div id="list-footer">
+        <ul>
+            <li><i class="fa fa-utensils">
+                    <a href="#">Proposer un restaurant</a></i>
+
+            <li><i class="fas fa-hands-helping"></i>
+                <a href="#">Devenir partenaire</a>
+
+            <li><a href="#">Mentions légales</a>
+
+            <li><a href="#">Contact</a>
+        </ul>
+    </div>
+</footer>
 </body>
+
 </html>
