--- a/page4.html
+++ b/page4.html
@@ -4,13 +4,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
-    <title>OhMyfood-Menu à la française</title>
+    <title>OhMyfood-Menu le délice des sens</title>
 </head>
+
 <body>
     <header>
     <a href="index.html"><i class="fas fa-arrow-left"></i></a>
     <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                alt="jay-wennington">
 </header>
+
+<section class="menu-delice-sens">
+    <h1 class=titre>Le délice des sens</h1>
+    <p>ENTR&Eacute;E</p><br>
+
+    <div class="entree"><strong>Tartare de thon</strong><br>
+        Assaisonné au yuzu
+        <span>25€</span>
+    </div>
+
+    <div class="entree"><strong></strong><br>
+        Carotte, panais, topinambour
+        <span>35€</span>
+    </div>
+
+
+    <div class="entree"><strong>Foie gras de canard cuit entier</strong><br>
+        Confiture de figue et pain tosté
+        <span>35€</span>
+        <span class="check"><i class="far fa-check-circle"></i></span>
+    </div>
+
+    <p>PLATS</p><br>
+    <div class="plat"><strong>Noix de coquilles Saint-Jacques</strong><br>
+        Accompagnées d'une purée de panais
+        <span>40€</span>
+    </div>
+
+    <div class="plat"><strong>Magret de canard</strong><br>
+        Sur lit de purée de céleri-rave
+        <span>40€</span>
+    </div>
+
+    <div class="plat"><strong>Langoustines poêlées</strong><br>
+        Purée de patates douces
+        <span>35€</span>
+    </div>
+
+    <div class="plat"><strong>Mijoté de queue de boeuf</strong><br>
+        Et riz sauvage au zeste de citron
+        <span>44€</span>
+    </div>
+
+    <p>DESSERTS</p><br>
+    <div class="dessert"><strong>Macaron noistte et chocolat</strong><br>
+        Glace au caramel brun et sel de guérande
+        <span>18€</span>
+    </div>
+
+    <div class="dessert"><strong>Bababa au rhum revisité</strong><br>
+        Avec son coulis de citron
+        <span>22€</span>
+    </div>
+
+    <div class="dessert"><strong>tarte au citron meringuée</strong><br>
+        Destructurée
+        <span>23€</span>
+    </div>
+
+    <div class="bouton">Commander</div>
+</section>
+
+<footer>
+    <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+    <div id="list-footer">
+        <ul>
+            <li><i class="fa fa-utensils">
+                    <a href="#">Proposer un restaurant</a></i>
+
+            <li><i class="fas fa-hands-helping"></i>
+                <a href="#">Devenir partenaire</a>
+
+            <li><a href="#">Mentions légales</a>
+
+            <li><a href="#">Contact</a>
+        </ul>
+    </div>
+</footer>
 </body>
+
 </html>
