Structure html de base fichier page4.html

--- a/page4.html
+++ b/page4.html
@@ -26,52 +26,47 @@
         <span>25€</span>
     </div>
 
-    <div class="entree"><strong></strong><br>
-        Carotte, panais, topinambour
+    <div class="entree"><strong>Bouchée de homard croustillant</strong><br>
+        Et sa farandole de petits légumes
         <span>35€</span>
     </div>
 
 
-    <div class="entree"><strong>Foie gras de canard cuit entier</strong><br>
-        Confiture de figue et pain tosté
-        <span>35€</span>
+    <div class="entree"><strong>Velouté de cèpes</strong><br>
+        Aux truffes
+        <span>20€</span>
         <span class="check"><i class="far fa-check-circle"></i></span>
     </div>
 
     <p>PLATS</p><br>
-    <div class="plat"><strong>Noix de coquilles Saint-Jacques</strong><br>
-        Accompagnées d'une purée de panais
+    <div class="plat"><strong>Poulet rôti aux herbes de provence</strong><br>
+        Et sa crème de truffe
         <span>40€</span>
     </div>
 
-    <div class="plat"><strong>Magret de canard</strong><br>
-        Sur lit de purée de céleri-rave
-        <span>40€</span>
-    </div>
-
-    <div class="plat"><strong>Langoustines poêlées</strong><br>
-        Purée de patates douces
+    <div class="plat"><strong>Langouste rôtie</strong><br>
+        Et ses légumes de saison
         <span>35€</span>
     </div>
 
-    <div class="plat"><strong>Mijoté de queue de boeuf</strong><br>
-        Et riz sauvage au zeste de citron
+    <div class="plat"><strong>Côte de boeuf aigue</strong><br>
+        Et sa purée de panais
         <span>44€</span>
     </div>
 
     <p>DESSERTS</p><br>
-    <div class="dessert"><strong>Macaron noistte et chocolat</strong><br>
-        Glace au caramel brun et sel de guérande
+    <div class="dessert"><strong>Farandole de désserts</strong><br>
+        Du chef
         <span>18€</span>
     </div>
 
-    <div class="dessert"><strong>Bababa au rhum revisité</strong><br>
-        Avec son coulis de citron
+    <div class="dessert"><strong>Crème brûlée</strong><br>
+        revisitée
         <span>22€</span>
     </div>
 
-    <div class="dessert"><strong>tarte au citron meringuée</strong><br>
-        Destructurée
+    <div class="dessert"><strong>Tiramisù</strong><br>
+        &Agrave; la noistte
         <span>23€</span>
     </div>
 
