Structure html de base fichier page2.html

--- a/page1.html
+++ b/page1.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/39e2a55935.js" crossorigin="anonymous"></script>
-    
+
     <title>OhMyfood-Menu à la française</title>
 </head>
 
@@ -16,8 +16,7 @@
     <header>
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
-        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                alt="toa-heftiba" />
+        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba" />
     </header>
 
     <section class="menu-français">
@@ -50,11 +49,6 @@
         <div class="plat"><strong>Magret de canard</strong><br>
             Et parmentier de pommes de terres
             <span>35€</span>
-        </div>
-
-        <div class="plat"><strong>Pigeonneaux d'Ille et Vilaine</strong><br>
-            Sur son lit de gnocchis aux légumes
-            <span>44€</span>
         </div>
 
         <div class="plat"><strong>Pigeonneaux d'Ille et Vilaine</strong><br>
