--- a/page2.html
+++ b/page2.html
@@ -15,8 +15,7 @@
     <header>
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
-        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                alt="still" />
+        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="still" />
     </header>
 
     <section class="menu-note-enchantee">
@@ -25,7 +24,7 @@
 
         <div class="entree"><strong>Ravioles de foie gras</strong><br>
             Sur blini à la farine de blé noir
-            <span>35€</span>
+            <span>25€</span>
         </div>
 
         <div class="entree"><strong>Caviar osciètre</strong><br>
@@ -33,11 +32,15 @@
             <span>35€</span>
         </div>
 
+        <div class="entree"><strong>Homar et espuma de...</strong><br>
+            Mariné aux zests d'orange
+            <span>20€</span>
+            <span class="check"><i class="far fa-check-circle"></i></span>
+        </div>
 
         <div class="entree"><strong>Foie gras de canard cuit entier</strong><br>
             Confiture de figue et pain tosté
             <span>35€</span>
-            <span class="check"><i class="far fa-check-circle"></i></span>
         </div>
 
         <p>PLATS</p><br>
