--- a/page4.html
+++ b/page4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,84 +12,83 @@
 
 <body>
     <header>
-    <a href="index.html"><i class="fas fa-arrow-left"></i></a>
-    <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
-    <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                alt="jay-wennington">
-</header>
+        <a href="index.html"><i class="fas fa-arrow-left"></i></a>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="jay-wennington">
+    </header>
 
-<section class="menu-delice-sens">
-    <h1 class=titre>Le délice des sens</h1>
-    <p>ENTR&Eacute;E</p><br>
+    <section class="menu-delice-sens">
+        <h1 class=titre>Le délice des sens</h1>
+        <p>ENTR&Eacute;E</p><br>
 
-    <div class="entree"><strong>Tartare de thon</strong><br>
-        Assaisonné au yuzu
-        <span>25€</span>
-    </div>
+        <div class="entree"><strong>Tartare de thon</strong><br>
+            Assaisonné au yuzu
+            <span>25€</span>
+        </div>
 
-    <div class="entree"><strong>Bouchée de homard croustillant</strong><br>
-        Et sa farandole de petits légumes
-        <span>35€</span>
-    </div>
+        <div class="entree"><strong>Bouchée de homard croustillant</strong><br>
+            Et sa farandole de petits légumes
+            <span>35€</span>
+        </div>
 
 
-    <div class="entree"><strong>Velouté de cèpes</strong><br>
-        Aux truffes
-        <span>20€</span>
-        <span class="check"><i class="far fa-check-circle"></i></span>
-    </div>
+        <div class="entree"><strong>Velouté de cèpes</strong><br>
+            Aux truffes
+            <span>20€</span>
+            <span class="check"><i class="far fa-check-circle"></i></span>
+        </div>
 
-    <p>PLATS</p><br>
-    <div class="plat"><strong>Poulet rôti aux herbes de provence</strong><br>
-        Et sa crème de truffe
-        <span>40€</span>
-    </div>
+        <p>PLATS</p><br>
+        <div class="plat"><strong>Poulet rôti aux herbes de provence</strong><br>
+            Et sa crème de truffe
+            <span>40€</span>
+        </div>
 
-    <div class="plat"><strong>Langouste rôtie</strong><br>
-        Et ses légumes de saison
-        <span>35€</span>
-    </div>
+        <div class="plat"><strong>Langouste rôtie</strong><br>
+            Et ses légumes de saison
+            <span>35€</span>
+        </div>
 
-    <div class="plat"><strong>Côte de boeuf aigue</strong><br>
-        Et sa purée de panais
-        <span>44€</span>
-    </div>
+        <div class="plat"><strong>Côte de boeuf aigue</strong><br>
+            Et sa purée de panais
+            <span>44€</span>
+        </div>
 
-    <p>DESSERTS</p><br>
-    <div class="dessert"><strong>Farandole de désserts</strong><br>
-        Du chef
-        <span>18€</span>
-    </div>
+        <p>DESSERTS</p><br>
+        <div class="dessert"><strong>Farandole de désserts</strong><br>
+            Du chef
+            <span>18€</span>
+        </div>
 
-    <div class="dessert"><strong>Crème brûlée</strong><br>
-        revisitée
-        <span>22€</span>
-    </div>
+        <div class="dessert"><strong>Crème brûlée</strong><br>
+            revisitée
+            <span>22€</span>
+        </div>
 
-    <div class="dessert"><strong>Tiramisù</strong><br>
-        &Agrave; la noistte
-        <span>23€</span>
-    </div>
+        <div class="dessert"><strong>Tiramisù</strong><br>
+            &Agrave; la noistte
+            <span>23€</span>
+        </div>
 
-    <div class="bouton">Commander</div>
-</section>
+        <div class="bouton">Commander</div>
+    </section>
 
-<footer>
-    <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
-    <div id="list-footer">
-        <ul>
-            <li><i class="fa fa-utensils">
-                    <a href="#">Proposer un restaurant</a></i>
+    <footer>
+        <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
+        <div id="list-footer">
+            <ul>
+                <li><i class="fa fa-utensils">
+                        <a href="#">Proposer un restaurant</a></i>
 
-            <li><i class="fas fa-hands-helping"></i>
-                <a href="#">Devenir partenaire</a>
+                <li><i class="fas fa-hands-helping"></i>
+                    <a href="#">Devenir partenaire</a>
 
-            <li><a href="#">Mentions légales</a>
+                <li><a href="#">Mentions légales</a>
 
-            <li><a href="#">Contact</a>
-        </ul>
-    </div>
-</footer>
+                <li><a href="#">Contact</a>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
