--- a/index.html
+++ b/index.html
@@ -54,36 +54,44 @@
     <section id="restaurants">
         <h1>Restaurants</h1>
 
-        <div class="choix-menus"></div>
-        <a href="page1.html"><img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                alt="jay-wennington" /></a>
+        <div class="choix-menu"><a href="page1.html"><img
+                    src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington" /></a>
+            <div class="btn">Nouveau</div>
+        </div>
         <div class="menu_description">
             <h2>La palette du goût</h2>
             <p><span>Ménilmontant</span></p>
         </div>
-        <div class="choix-menus">
+
+        <figure class="choix-menus">
             <a href="page2.html"><img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                     alt="louis-hansel" /></a>
-            <div class="menu_description">
+            <div class="btn">Nouveau</div>
+            <figcaption class="menu_description">
                 <h2>La note enchantée</h2>
                 <p><span>Charonne</span></p>
-            </div>
-        </div>
-        <div class="choix-menus">
+            </figcaption>
+        </figure>
+
+        <figure class="choix-menus">
             <a href="page3.html"><img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil" /></a>
-            <div class="menu_description">
+            <div class="btn">Nouveau</div>
+            <figcaption class="menu_description">
                 <h2>&Agrave; la française</h2>
                 <p><span>Cité rouge</span></p>
-            </div>
-        </div>
-        <div class="choix-menus">
+            </figcaption>
+        </figure>>
+
+        <figure class="choix-menus">
             <a href="page4.html"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                     alt="toa-heftiba" /></a>
-            <div class="menu_description">
+            <div class="btn">Nouveau</div>
+
+            <figcaption class="menu_description">
                 <h2>Le délice des sens</h2>
                 <p><span>Folie-Méricourt</span></p>
-            </div>
-        </div>
+            </figcaption>
+        </figure>
     </section>
 
     <footer>
