Ajout icônes coeur dans fichier index.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <div class="menu_description">
             <h2>La palette du goût</h2>
             <p><span>Ménilmontant</span></p>
+            <button><i class="far fa-heart"></i></button>
         </div>
 
         <figure class="choix-menus">
@@ -70,6 +71,7 @@
             <figcaption class="menu_description">
                 <h2>La note enchantée</h2>
                 <p><span>Charonne</span></p>
+                <button><i class="far fa-heart"></i></button>
             </figcaption>
         </figure>
 
@@ -79,6 +81,7 @@
             <figcaption class="menu_description">
                 <h2>&Agrave; la française</h2>
                 <p><span>Cité rouge</span></p>
+                <button><i class="far fa-heart"></i></button>
             </figcaption>
         </figure>>
 
@@ -90,6 +93,7 @@
             <figcaption class="menu_description">
                 <h2>Le délice des sens</h2>
                 <p><span>Folie-Méricourt</span></p>
+                <button><i class="far fa-heart"></i></button>
             </figcaption>
         </figure>
     </section>
