ajustements css des filter icônes et textes

--- a/page1.html
+++ b/page1.html
@@ -16,11 +16,11 @@
     <header>
         <a href="index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
-        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba" />
+        <div class="header"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="toa-heftiba" /></div>
     </header>
 
     <section class="menu-français">
-        <h1 class=titre>&Agrave; la française</h1>
+        <h1 class=titre>&Agrave; la française</h1><span><i class="far fa-heart"></i></span>
         <p>ENTR&Eacute;E</p><br>
 
         <div class="entree"><strong>Tartare de poulpe acidulé</strong><br>
