--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
     <section class="recherche">
         <div id="searchbar">
             <span class="left"><i class="fa fa-map-marker"></i></span>
-            <span class="middle"><input type="text" value="Paris,Belleville" /></span>
-            <span class="right"><button type="submit"><span class="val_search">Rechercher</span><i class="fa fa-search"
-                        aria-hidden="true"></i>
-                </button></span>
+            Paris, Belleville
         </div>
+
         <h1>Réservez le menu qui vous convient</h1>
         <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
         <div class="bouton">Explorer nos restaurants</div>
@@ -34,19 +32,19 @@
 
         <div class="filter">
             <div class="numero">1</div>
-            <div><i class="fas fa-mobile-alt"></i></div>
-            <span><a href="#"><strong>Choisissez votre restaurant</strong></a></span>
+            <div class="text"><i class="fas fa-mobile-alt"></i></div>
+            <span class="choix"><a href="#"><strong>Choisissez un restaurant</strong></a></span>
         </div>
 
         <div class="filter">
             <div class="numero">2</div>
-            <div><i class="fas fa-list"></i></div>
+            <div class="text"><i class="fas fa-list"></i></div>
             <span><a href="#"><strong>Composez votre menu</strong></a></span>
         </div>
 
         <div class="filter">
             <div class="numero">3</div>
-            <div> <i class="fas fa-store"></i></div>
+            <div class="text"> <i class="fas fa-store"></i></div>
             <span><a href="#"><strong>Dégustez au restaurant</strong></a></span>
         </div>
     </section>
@@ -54,49 +52,62 @@
     <section id="restaurants">
         <h1>Restaurants</h1>
 
-        <div class="choix-menu"><a href="page1.html"><img
-                    src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="jay-wennington" /></a>
+        <div class="choix-menu">
+            <a href="page1.html"><img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    alt="jay-wennington" /></a>
             <div class="btn">Nouveau</div>
-        </div>
-        <div class="menu_description">
-            <h2>La palette du goût</h2>
-            <p><span>Ménilmontant</span></p>
-            <button><i class="far fa-heart"></i></button>
+
+            <div class="menu-description">
+                <div class="description">
+                    <h3>La palette du goût</h3>
+                    <p><span>Ménilmontant</span></p>
+                </div>
+                <span><i class="far fa-heart"></i></span>
+            </div>
         </div>
 
-        <figure class="choix-menus">
+        <div class="choix-menu">
             <a href="page2.html"><img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                     alt="louis-hansel" /></a>
             <div class="btn">Nouveau</div>
-            <figcaption class="menu_description">
-                <h2>La note enchantée</h2>
-                <p><span>Charonne</span></p>
-                <button><i class="far fa-heart"></i></button>
-            </figcaption>
-        </figure>
 
-        <figure class="choix-menus">
+            <div class="menu-description">
+                <div class="description">
+                    <h3>La note enchantée</h3>
+                    <p><span>Charonne</span></p>
+                </div>
+                <span><i class="far fa-heart"></i></span>
+            </div>
+        </div>
+
+        <div class="choix-menu">
             <a href="page3.html"><img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="stil" /></a>
             <div class="btn">Nouveau</div>
-            <figcaption class="menu_description">
-                <h2>&Agrave; la française</h2>
-                <p><span>Cité rouge</span></p>
-                <button><i class="far fa-heart"></i></button>
-            </figcaption>
-        </figure>>
 
-        <figure class="choix-menus">
+            <div class="menu-description">
+            <div class="description">
+                <h3>&Agrave; la française</h3>
+                <p><span>Cité rouge</span></p>
+            </div>
+            <span><i class="far fa-heart"></i></span>
+        </div>
+        </div>
+
+        <div class="choix-menu">
             <a href="page4.html"><img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                     alt="toa-heftiba" /></a>
             <div class="btn">Nouveau</div>
 
-            <figcaption class="menu_description">
-                <h2>Le délice des sens</h2>
+            <div class="menu-description">
+            <div class="description">
+                <h3>Le délice des sens</h3>
                 <p><span>Folie-Méricourt</span></p>
-                <button><i class="far fa-heart"></i></button>
-            </figcaption>
-        </figure>
+            </div>
+            <span><i class="far fa-heart"></i></span>
+        </div>
+    </div>
     </section>
+
 
     <footer>
         <img src="./images/logo/ohmyfood@2x.svg" alt="logo en-tête">
