Ajout balises /br dans div class reservation

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
             Paris, Belleville
         </div>
 
-        <h1>Réservez le menu qui vous convient</h1>
-        <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-        <div class="bouton">Explorer nos restaurants</div>
+    <div class="reservation">
+        <h1>Réservez le menu qui</br> vous convient</h1>
+        <p>Découvrez des restaurants d'exception,</br> sélectionnés par nos soins</p>
+        <div class="bouton"><strong>Explorer nos restaurants</strong></div>
+    </div>
     </section>
 
     <section id="filters">
